add react testing library, tests for component, add storybook, decorators, add story cases for components.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,10 @@
 {
   "Главная страница": "Main Page",
-  "Язык": "English"
+  "Язык": "English",
+  "Страница не найдена": "Page not found",
+  "Произошла непредвиденная ошибка": "Something was wrong",
+  "Обновить страницу": "Reload page",
+  "Создать ошибку": "('Throw Error')",
+  "О сайте": "About us",
+  "Главная": "Home"
 }
