--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,10 @@
 {
   "Главная страница": "Главная страница",
-  "Язык": "Русский"
+  "Язык": "Русский",
+  "Страница не найдена": "Страница не найдена",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "Создать ошибку": "Создать ошибку",
+  "О сайте": "О сайте",
+  "Главная": "Главная"
 }
