fix toggle button

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "Обновить страницу": "Reload page",
   "Создать ошибку": "('Throw Error')",
   "О сайте": "About us",
-  "Главная": "Home"
+  "Главная": "Home",
+  "Переключить": "Toggle"
 }
