--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
   "Обновить страницу": "Обновить страницу",
   "Создать ошибку": "Создать ошибку",
   "О сайте": "О сайте",
-  "Главная": "Главная"
+  "Главная": "Главная",
+  "Переключить": "Переключить"
 }
