--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,6 @@
   "Создать ошибку": "('Throw Error')",
   "О сайте": "About us",
   "Главная": "Home",
-  "Переключить": "Toggle"
+  "Переключить": "Toggle",
+  "Короткий язык": "En"
 }
