--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,6 @@
   "Создать ошибку": "Создать ошибку",
   "О сайте": "О сайте",
   "Главная": "Главная",
-  "Переключить": "Переключить"
+  "Переключить": "Переключить",
+  "Короткий язык": "Ru"
 }
