add modal, portal, change header

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,6 @@
   "О сайте": "About us",
   "Главная": "Home",
   "Переключить": "Toggle",
-  "Короткий язык": "En"
+  "Короткий язык": "En",
+  "Войти": "Log in"
 }
