--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,7 @@
   "Главная": "Главная",
   "Переключить": "Переключить",
   "Короткий язык": "Ru",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Уменьшить": "Уменьшить",
+  "Увеличить": "Увеличить"
 }
