add entities User, custom Input, LoginForm, add lazy for modal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,7 @@
   "Короткий язык": "En",
   "Войти": "Log in",
   "Уменьшить": "decrement",
-  "('Увеличить')": "increment"
+  "Увеличить": "increment",
+  "Введите имя": "Enter your name",
+  "Введите пароль": "Enter your password"
 }
