--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,7 @@
   "Короткий язык": "Ru",
   "Войти": "Войти",
   "Уменьшить": "Уменьшить",
-  "Увеличить": "Увеличить"
+  "Увеличить": "Увеличить",
+  "Введите имя": "Введите имя",
+  "Введите пароль": "Введите пароль"
 }
