add login module, custom text

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,8 @@
   "Уменьшить": "Уменьшить",
   "Увеличить": "Увеличить",
   "Введите имя": "Введите имя",
-  "Введите пароль": "Введите пароль"
+  "Введите пароль": "Введите пароль",
+  "Неверное имя пользователя или пароль": "Неверное имя пользователя или пароль",
+  "Форма авторизации": "Форма авторизации",
+  "Выйти": "Выйти"
 }
