--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,8 @@
   "Уменьшить": "decrement",
   "Увеличить": "increment",
   "Введите имя": "Enter your name",
-  "Введите пароль": "Enter your password"
+  "Введите пароль": "Enter your password",
+  "Неверное имя пользователя или пароль": "Wrong username or password",
+  "Форма авторизации": "Authorization",
+  "Выйти": "Log out"
 }
