add profile page, profile async reducer, optimization render (memo)

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,7 @@
   "Введите пароль": "Enter your password",
   "Неверное имя пользователя или пароль": "Wrong username or password",
   "Форма авторизации": "Authorization",
-  "Выйти": "Log out"
+  "Выйти": "Log out",
+  "Страница пользователя": "Profile page",
+  "Профиль": "Profile"
 }
