--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,7 @@
   "Введите пароль": "Введите пароль",
   "Неверное имя пользователя или пароль": "Неверное имя пользователя или пароль",
   "Форма авторизации": "Форма авторизации",
-  "Выйти": "Выйти"
+  "Выйти": "Выйти",
+  "Страница пользователя": "Страница пользователя",
+  "Профиль": "Профиль"
 }
