add two entities (Currency, Country), save profile changes, cancel profile changes, protected route

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,5 +18,7 @@
   "Форма авторизации": "Authorization",
   "Выйти": "Log out",
   "Страница пользователя": "Profile page",
-  "Профиль": "Profile"
+  "Профиль": "Profile",
+  "Укажите валюту": "Specify the currency",
+  "Укажите страну": "Specify country"
 }
