--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -2,5 +2,14 @@
   "Профиль": "Profile",
   "Редактировать": "Edit",
   "Ваше имя": "Your firstname",
-  "Ваша фамилия": "Your lastname"
+  "Ваша фамилия": "Your lastname",
+  "Произошла ошибка при загрузке профиля": "Something was wrong",
+  "Попробуйте обновить страницу": "Try to reload the page",
+  "Отменить": "Cansel",
+  "Сохранить": "Save",
+  "Возраст": "Age",
+  "Город": "City",
+  "Имя пользователя": "Username",
+  "Введите ссылку на аватар": "Write link for avatar",
+  "Укажите валюту": "Specify the currency"
 }
