--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -2,5 +2,14 @@
   "Профиль": "Профиль",
   "Редактировать": "Редактировать",
   "Ваше имя": "Ваше имя",
-  "Ваша фамилия": "Ваша фамилия"
+  "Ваша фамилия": "Ваша фамилия",
+  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
+  "Попробуйте обновить страницу": "Попробуйте обновить страницу",
+  "Отменить": "Отменить",
+  "Сохранить": "Сохранить",
+  "Возраст": "Возраст",
+  "Город": "Город",
+  "Имя пользователя": "Имя пользователя",
+  "Введите ссылку на аватар": "Введите ссылку на аватар",
+  "Укажите валюту": "Укажите валюту"
 }
