--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,5 +18,7 @@
   "Форма авторизации": "Форма авторизации",
   "Выйти": "Выйти",
   "Страница пользователя": "Страница пользователя",
-  "Профиль": "Профиль"
+  "Профиль": "Профиль",
+  "Укажите валюту": "Укажите валюту",
+  "Укажите страну": "Укажите страну"
 }
