--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -20,5 +20,10 @@
   "Страница пользователя": "Страница пользователя",
   "Профиль": "Профиль",
   "Укажите валюту": "Укажите валюту",
-  "Укажите страну": "Укажите страну"
+  "Укажите страну": "Укажите страну",
+  "Данные не указаны": "Данные не указаны",
+  "Некорректный возраст": "Некорректный возраст",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Некорректный регион": "Некорректный регион",
+  "Ошибка на сервере": "Ошибка на сервере"
 }
