add articles page, protected routes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -25,5 +25,6 @@
   "Некорректный возраст": "Некорректный возраст",
   "Имя и фамилия обязательны": "Имя и фамилия обязательны",
   "Некорректный регион": "Некорректный регион",
-  "Ошибка на сервере": "Ошибка на сервере"
+  "Ошибка на сервере": "Ошибка на сервере",
+  "Статьи": "Статьи"
 }
