--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,5 +25,6 @@
   "Некорректный возраст": "INCORRECT_AGE",
   "Имя и фамилия обязательны": "INCORRECT_USER_DATA",
   "Некорректный регион": "INCORRECT_COUNTRY",
-  "Ошибка на сервере": "SERVER_ERROR"
+  "Ошибка на сервере": "SERVER_ERROR",
+  "Статьи": "Articles"
 }
