add comments list

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,5 +26,6 @@
   "Имя и фамилия обязательны": "INCORRECT_USER_DATA",
   "Некорректный регион": "INCORRECT_COUNTRY",
   "Ошибка на сервере": "SERVER_ERROR",
-  "Статьи": "Articles"
+  "Статьи": "Articles",
+  "('Комментарии отсутствуют')": "('Комментарии отсутствуют')"
 }
