--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,4 +1,5 @@
 {
   "Статья не найдена": "Article not found",
-  "Произошла ошибка при загрузке статьи": "Error loading of article page"
+  "Произошла ошибка при загрузке статьи": "Error loading of article page",
+  "Комментарии": "Comments"
 }
