--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -26,5 +26,6 @@
   "Имя и фамилия обязательны": "Имя и фамилия обязательны",
   "Некорректный регион": "Некорректный регион",
   "Ошибка на сервере": "Ошибка на сервере",
-  "Статьи": "Статьи"
+  "Статьи": "Статьи",
+  "('Комментарии отсутствуют')": "('Комментарии отсутствуют')"
 }
